--- a/src/app/data-management/data-manager/data-table/data-table.component.html
+++ b/src/app/data-management/data-manager/data-table/data-table.component.html
@@ -1,6 +1,6 @@
 
     <ag-grid-angular #dataGrid fxFlex
-        class="ag-theme-balham mat-elevation-z2 fadeInRight"
+        class="ag-theme-balham"
         rowSelection="multiple"
         suppressRowClickSelection="true"
         suppressColumnVirtualisation="true"
