--- a/src/app/data-management/data-manager/data-property-picker/data-property-picker.component.scss
+++ b/src/app/data-management/data-manager/data-property-picker/data-property-picker.component.scss
@@ -1,8 +1,25 @@
 @import '../../../../styles/variables';
 
 ::ng-deep.data-picker{
-    background:white;  
+    margin:0px $gap-size * 6px;
     .mat-form-field-wrapper{
-      margin-bottom: -1.25em!important;
+      .mat-select-value{ 
+        color: $foreground-color !important;
+      }
+            
+      .mat-form-field-label {
+        /*change color of label*/
+        color: $foreground-color !important;
+       }
+      
+      .mat-form-field-underline {
+        /*change color of underline*/
+        background-color: $foreground-color !important;
+      } 
+
+      .mat-select-arrow{
+        color: $foreground-color !important;
+      }
     }
+
 }
