--- a/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
+++ b/src/app/timesheet-modules/timesheet-statistic/timesheet-statistic/timesheet-statistic.component.html
@@ -8,7 +8,7 @@
     </ng-container>
 
     <app-timesheet-statistic-table #statTable class="mat-elevation-z2" fxFlex 
-        [config]="vm">
+        [config]="vm.tableConfig">
     </app-timesheet-statistic-table>
   
 </app-main-skeleton>
