fix misalignment timesheet card

--- a/src/app/shared-timesheet/components/timesheet-card/timesheet-card.component.html
+++ b/src/app/shared-timesheet/components/timesheet-card/timesheet-card.component.html
@@ -21,7 +21,7 @@
 
     </span>
 
-    <span fxLayout="column" fxLayoutAlign="space-between center">
+    <span fxLayout="column" fxLayoutAlign="space-between center" style="min-width:40px">
 
       <span *ngIf="!timesheet.status else closedIcon" 
         fxLayout="column" fxLayoutAlign="start center" class="color-warn">
