--- a/src/app/layout/main-nav/main-nav.component.html
+++ b/src/app/layout/main-nav/main-nav.component.html
@@ -21,7 +21,7 @@
       </div> 
     </div>
 
-    <app-main-bottom-nav fxHide.gt-xs [config]="config.bottomNavConfig"></app-main-bottom-nav>
+    <app-main-bottom-nav fxHide.gt-xs [navigations]="config.bottomNavigations"></app-main-bottom-nav>
 
   </mat-sidenav-content>
 
