remove simple top nav, replace with main top nav

--- a/src/app/mission-modules/mission-image-list/image-viewer/image-viewer.component.html
+++ b/src/app/mission-modules/mission-image-list/image-viewer/image-viewer.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="image-toolbar color-accent" fxLayout="row" fxLayoutAlign="space-between center" 
     [fxHide]="toolbarHidden">
-    <button mat-icon-button aria-label="Lukk" (click)="finished()">
+    <button mat-icon-button aria-label="Lukk" (click)="close()">
         <mat-icon class="scale-150">chevron_left</mat-icon>
     </button>
     <button mat-icon-button (click)="openBottomSheet()"><mat-icon>more_vert</mat-icon></button>
