--- a/src/app/timesheet-modules/user-timesheet-form/user-timesheet-form-view/user-timesheet-form-view.component.html
+++ b/src/app/timesheet-modules/user-timesheet-form/user-timesheet-form-view/user-timesheet-form-view.component.html
@@ -7,6 +7,11 @@
           ({{ mission.id }}) {{ mission.address }}
         </mat-option>
       </mat-autocomplete>
+
+      <button mat-button *ngIf="mission.value" matSuffix mat-icon-button aria-label="Clear" (click)="mission.setValue('')">
+        <mat-icon>close</mat-icon>
+      </button>
+
     <mat-error *ngIf="mission.errors">
       Velg ett oppdrag fra listen
     </mat-error>
