fix text on selected documents

--- a/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
+++ b/src/app/mission-modules/mission-image-list/mission-image-list/mission-image-list.component.html
@@ -4,7 +4,7 @@
     </app-main-top-nav-bar>
 
     <app-selectable-list #selectableList 
-        *ngIf="vm.images" identifier="id"
+        *ngIf="vm.images" identifier="id" selectedText="Bilde valgt"
         [totalRows]="vm.isXs ? 2 : 4"
         [entities]="vm.images" 
         [itemTemplate]="imgTemplate"
