--- a/src/app/shared/components/selectable-list/selectable-list.component.html
+++ b/src/app/shared/components/selectable-list/selectable-list.component.html
@@ -1,7 +1,8 @@
 <div class="entity-row">
     <div class="entity-column" *ngFor="let i of totalRows | arrayFromNumber">
-        <app-selectable-card selectedText="Bilde valgt" selectedIcon="check_circle"
+        <app-selectable-card 
             *ngFor="let selectable of (selectableEntities$ | async) | arrayslice: i:totalRows;let i = index;trackBy: trackByFn"
+            [selectedText]="selectedText" selectedIcon="check_circle"
             [isSelected]="selectable.selected" 
             (selected)="toggleSelect(selectable)"
             (click)="onItemClick(selectable.entity)">
